# Codex-Experimental-Design-Plugin

./: .gitignore  Canonical Build Contract.md  Dashboard UX Spec.md  Data & Schema Contract.md  Design of Experiments Theoretical Breakdown.md  IVT QbD Workflow Spec.md  Implementation Roadmap.md  LICENSE  MCP Tool API Spec.md  Packaging & Setup Guide.md  Product Requirements Document.md  Production Execution Plan.md  README.md  Scientific Methods Spec.md  Security & Provenance Plan.md  Technical Architecture Brief.md  Validation & Test Plan.md
.codex/: config.toml.example  local-environment.md
docs/: plugin_mcp_smoke_test.md
mcp-server/: README.md  pyproject.toml
mcp-server/src/doe_toolchain/: __init__.py  server.py
mcp-server/src/doe_toolchain/artifacts/: __init__.py
mcp-server/src/doe_toolchain/economics/: __init__.py
mcp-server/src/doe_toolchain/ivt/: __init__.py
mcp-server/src/doe_toolchain/observability/: __init__.py
mcp-server/src/doe_toolchain/science/: __init__.py
mcp-server/src/doe_toolchain/tools/: __init__.py
mcp-server/src/doe_toolchain/validation/: __init__.py
mcp-server/tests/: test_create_or_update_study.py  test_import_version.py  test_launch_dashboard_preview.py  test_schemas_and_fixtures.py  test_tool_registry.py  test_workbench_tools.py
planning/: plugin-smoke-tester-skill-plan.md
schemas/: artifact_metadata.schema.json  audit_log_entry.schema.json  candidate_design.schema.json  candidate_design_set.schema.json  contextual_ai_panel.schema.json  dashboard_payload.schema.json  design_comparison.schema.json  error.schema.json  (+10 more)
(+41 files in other folders)
