[project]
name = "doe-toolchain"
version = "0.1.0"
description = "Gate 0 skeleton for the DOE Scientific Toolchain MCP server."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "mcp>=1.6,<2",
  "pydantic>=2.7,<3",
  "jsonschema>=4.21,<5",
  "numpy>=1.26,<3",
  "scipy>=1.11,<2",
  "pandas>=2.2,<3",
  "statsmodels>=0.14,<1",
  "scikit-learn>=1.4,<2"
]

[project.scripts]
doe-toolchain-mcp = "doe_toolchain.server:main"

[dependency-groups]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<8"
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src", ".."]
